force-app/main/default/objects/loan__Month_End_Loan_Snapshot__c/loan__Month_End_Loan_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Month End Loan Snapshot</label>
    <nameField>
        <displayFormat>SS-{0}</displayFormat>
        <label>Month End Loan Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Month End Loan Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>