force-app/main/default/objects/loan__Month_End_Loan_Snapshot__c/fields/loan__Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Closed_Date__c</fullName>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>