force-app/main/default/objects/loan__Month_End_Loan_Snapshot__c/fields/loan__Delinquent_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Delinquent_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Delinquent Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>