force-app/main/default/objects/loan__Month_End_Loan_Snapshot__c/fields/loan__Frequency_of_Loan_Payment__c.field-meta.xml
<CustomField>
    <fullName>loan__Frequency_of_Loan_Payment__c</fullName>
    <label>Frequency of Loan Payment</label>
    <length>64</length>
    <type>Text</type>
</CustomField>