force-app/main/default/objects/loan__Month_End_Loan_Snapshot__c/fields/loan__Last_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Last_Payment_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Last payment amount received.</description>
    <label>Last_Payment_Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>