force-app/main/default/objects/loan__Month_End_Loan_Snapshot__c/fields/loan__Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Last_Payment_Date__c</fullName>
    <label>Last Payment Date</label>
    <type>Date</type>
</CustomField>