force-app/main/default/objects/loan__Month_End_Loan_Snapshot__c/fields/loan__Loan_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Account_Id__c</fullName>
    <label>Loan Account Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>