force-app/main/default/objects/loan__Month_End_Loan_Snapshot__c/fields/loan__Metro2_Account_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>loan__Metro2_Account_Status_Code__c</fullName>
    <label>Metro2 Account Status Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>