force-app/main/default/objects/loan__Month_End_Loan_Snapshot__c/fields/loan__Metro2_First_Delinquency_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Metro2_First_Delinquency_Date__c</fullName>
    <label>Metro2 First Delinquency Date</label>
    <type>Date</type>
</CustomField>