force-app/main/default/objects/loan__Month_End_Loan_Snapshot__c/fields/loan__Metro2_Payment_History__c.field-meta.xml
<CustomField>
    <fullName>loan__Metro2_Payment_History__c</fullName>
    <label>Metro2 Payment History</label>
    <length>180</length>
    <type>Text</type>
</CustomField>