force-app/main/default/objects/loan__Month_End_Loan_Snapshot__c/fields/loan__Metro2_Payment_Rating__c.field-meta.xml
<CustomField>
    <fullName>loan__Metro2_Payment_Rating__c</fullName>
    <label>Metro2 Payment Rating</label>
    <length>8</length>
    <type>Text</type>
</CustomField>