force-app/main/default/objects/loan__Month_End_Loan_Snapshot__c/fields/loan__Previous_Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Previous_Installment_Date__c</fullName>
    <label>Previous Installment Date</label>
    <type>Date</type>
</CustomField>